Fixing merging error

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
     width: 90%;
     margin: 0 auto;
-    background-image: url("Foundry.jpg");
+    background-image: url("./Foundry.jpg");
     background-size: cover;
 }
 
