--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
     height: 100%;
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
-    background-image: url("./Foundry.jpg");
+    background-image: url("../img/Foundry.jpg");
     background-size: cover;
 }
 
@@ -47,6 +47,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.5);
     font-family: 'Monoton', cursive;
     font-size: 30px;
+    display: inline-block;
     /* background-image: linear-gradient(to bottom right, red , yellow); */
 }
 
