--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,25 @@ footer {
     border-radius: 70px;
     /* display: inline-block; */
     float: left;
-    margin: 40px;
+    margin: 0px;
+}
+
+.bio {
+    display: block;
+    float: left;
+    font-size: 30px;
+    color: white;
+    font-family: 'Playball', cursive;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 10px;
+    /* width: 100%; */
+    margin: 0;
+}
+
+.leftpanel {
+    float: left;
+    width: 53%;
 }
 
 .container {
