--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ footer {
     background: none;
     display: block;
     clear: both;
-    margin: 20% 0 0 0;
+    /* margin: 20% 0 0 0; */
 }
 
 .headshot {
@@ -59,17 +59,19 @@ footer {
     /* float: right; */
     /* justify-content: flex-end; */
     /* align-items: center; */
-    height: 100%;
+    height: 50%;
     width: 46%;
     /* flex-direction: row; */
     /* flex-wrap: wrap; */
-    margin: 0% 7% 7% 55%;
+    margin: 0% 4% 0% 55%;
 }
 
 .box {
-    width: 150px;
+    /* width: 150px; */
+    width: 450px;
     height: 100px;
-    padding: 10px;
+    /* padding: 10px; */
+    padding: 5px;
     border-radius: 10px;
     text-align: center;
     line-height: 100px;
