--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,12 @@ header, footer {
     padding: 10px;
     color: white;
     border-radius: 20px;
+    width: 100%
 }
 
 header {
     font-family: 'Playball', cursive;
-    font-size: 60px;
+    font-size: 55px;
     background: rgba(0,0,0,0.3);
 }
 
@@ -41,7 +42,7 @@ footer {
     background: none;
     display: block;
     clear: both;
-    width: 100%;
+    /* width: 100%; */
     /* margin: 20% 0 0 0; */
 }
 
